https://jira.jboss.org/jira/browse/JBIDE-5838 Default launch configuration for EAP 5.0 and SOA-P 5.0 should have max heap -Xmx value increased to 768m
git-svn-id: http://svn.jboss.org/repos/jbosstools/branches/jbosstools-3.1.0.RC2@20302 a97e2381-89e5-4abb-bab3-167db6db766c